--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,7 @@
-streamlit==1.8.1
-pandas==1.1.3
-base58==2.0.1
-numpy
-pillow==8.0.1
-plotly==4.14.1
-scikit-learn==0.23.2
-lazypredict==0.2.7
-seaborn==0.11.1
-matplotlib==3.3.3
-xgboost==1.1.1
-lightgbm==2.3.1
-pytest==5.4.3
-tqdm==4.56.0
-altair<5
+streamlit
+pandas
+lazypredict
+sklearn
+matplotlib
+seaborn
+base64
